# mcp-gateway-gemini3

./: .dockerignore  .gitignore  README.md  cloudbuild.yaml  codex_audit.json  docker-compose.yml  package.json  playwright.config.js  requirements.txt
acl-proxy/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  acl-proxy.sample.toml
acl-proxy/demos/external-auth-termstation-adapter/: README.md  package-lock.json  package.json  tsconfig.json
acl-proxy/demos/external-auth-termstation-adapter/src/: server.ts
acl-proxy/demos/external-auth-webapp/: README.md  package-lock.json  package.json  tsconfig.json
acl-proxy/demos/external-auth-webapp/public/: client.js  index.html
acl-proxy/demos/external-auth-webapp/src/: server.ts
acl-proxy/scripts/hooks/: pre-commit  pre-push
acl-proxy/scripts/ops/: guard_changes.py  precommit_check.py  prepush_check.py  setup_git_hooks.sh
acl-proxy/src/: app.rs  external_auth.rs  lib.rs  main.rs
acl-proxy/src/capture/: mod.rs
acl-proxy/src/cli/: mod.rs
acl-proxy/src/config/: mod.rs
acl-proxy/src/logging/: mod.rs
acl-proxy/src/loop_protection/: mod.rs
acl-proxy/src/policy/: mod.rs
acl-proxy/src/proxy/: http.rs  https_connect.rs  https_transparent.rs  mod.rs
acl-proxy/tests/: capture.rs  cli_extract_capture_body.rs  config_cli.rs  config_reload.rs  logging.rs  policy_cli.rs  proxy_http.rs  proxy_https_connect.rs  proxy_https_transparent.rs
docker/: Caddyfile  gateway.Dockerfile  proxy.Dockerfile
docs/: demo-presentation.html  demo-video-script.md  devpost-submission.md
jobs/: __init__.py  retest_queue.py  (+1 more)
(+41 files in other folders)
